[KTB-20] feat: 블로그 포스트 수정

--- a/public/posts/2024-07-10-ari-post.md
+++ b/public/posts/2024-07-10-ari-post.md
@@ -126,11 +126,6 @@ export default function ThemeSwitch() {
 컴포넌트가 클라이언트 사이드에서 mount되면 mounted를 true로 바꾸도록 한다. 그 전까지는 아무것도 띄우지 않도록 토글 스위치와 크기가 같은 투명 이미지를 보여준다.
 
 
-
-클라우드 개발자
-이름: 변미담 (ari.byun)
-
-주요 기술: AWS, React, Express
-
-소개: 안녕하세요, ari입니다.
+#### 결론
+이렇게 Next.js에서 제공하는 next-themes 패키지를 이용해 블로그에 다크모드 기능을 추가해보았다. 서버 사이드 렌더링과 클라이언트 사이드 렌더링을 구분하고 각 과정이 어떻게 이루어지는지 이해하기 위해 적용해보기 좋은 예시인 것 같다.
 
