[KTB-18] feat: post 필수 matter 업데이트 및 post template 추가

--- a/public/posts/2024-07-10-ari-post.md
+++ b/public/posts/2024-07-10-ari-post.md
@@ -3,6 +3,8 @@ title: 'Next.js + TailwindCSS로 다크모드 구현'
 date: '2024-07-10'
 author: 'Ari.Byun'
 description: '팀블로그에 다크 모드 토글 기능을 추가한 과정 공유'
+
+category: 'Blog'
 image: ''
 ---
 
