[KTB-40] feat: post 위치 변경

--- a/public/posts/2024-07-18-rag.md
+++ b/public/posts/2024-07-18-rag.md
@@ -2,7 +2,7 @@
 title: 'RAG, FT 주저리주저리'
 date: '2024-07-18'
 author: 'kevin.lee'
-description: 'RAG, FT 요약
+description: 'RAG, FT 요약'
 
 category: 'Blog'
 image: ''
