--- a/public/posts/2024-07-18-NN.md
+++ b/public/posts/2024-07-18-NN.md
@@ -9,79 +9,6 @@ image: ''
 tags: ['NN']
 ---
 
-
-<head>
-  <style>
-    table.dataframe {
-      white-space: normal;
-      width: 100%;
-      height: 240px;
-      display: block;
-      overflow: auto;
-      font-family: Arial, sans-serif;
-      font-size: 0.9rem;
-      line-height: 20px;
-      text-align: center;
-      border: 0px !important;
-    }
-
-    table.dataframe th {
-      text-align: center;
-      font-weight: bold;
-      padding: 8px;
-    }
-
-    table.dataframe td {
-      text-align: center;
-      padding: 8px;
-    }
-
-    table.dataframe tr:hover {
-      background: #b8d1f3; 
-    }
-
-    .output_prompt {
-      overflow: auto;
-      font-size: 0.9rem;
-      line-height: 1.45;
-      border-radius: 0.3rem;
-      -webkit-overflow-scrolling: touch;
-      padding: 0.8rem;
-      margin-top: 0;
-      margin-bottom: 15px;
-      font: 1rem Consolas, "Liberation Mono", Menlo, Courier, monospace;
-      color: $code-text-color;
-      border: solid 1px $border-color;
-      border-radius: 0.3rem;
-      word-break: normal;
-      white-space: pre;
-    }
-
-  .dataframe tbody tr th:only-of-type {
-      vertical-align: middle;
-  }
-
-  .dataframe tbody tr th {
-      vertical-align: top;
-  }
-
-  .dataframe thead th {
-      text-align: center !important;
-      padding: 8px;
-  }
-
-  .page__content p {
-      margin: 0 0 0px !important;
-  }
-
-  .page__content p > strong {
-    font-size: 0.8rem !important;
-  }
-
-  </style>
-</head>
-
-
 sigmoid 구현하기
 
 
@@ -94,11 +21,9 @@ def sigmoid(x):
 
 
 
-</pre>
 
 
 
-</pre>
 3 layer 신경망
 
 
@@ -465,8 +390,8 @@ train acc, test acc, loss | 0.9481833333333334, 0.9466, 0.13587008909628817
 <pre>
 <Figure size 640x480 with 1 Axes>
 </pre>
-(/images/kevin/2024-07-18-01.png)
 
+![accuracy](/images/kevin/2024-07-18-01.png)
 ```python
 epochs = range(1, len(train_loss_list) + 1)
 
@@ -481,7 +406,8 @@ plt.legend()
 # 그래프 출력
 plt.show()
 ```
-(/images/kevin/2024-07-18-02.png)
+
+![loss](/images/kevin/2024-07-18-01.png)
 <pre>
 <Figure size 640x480 with 1 Axes>
 </pre>
