[KTB-44] feat: post upload

--- a/public/posts/2024-07-19-MNIST.md
+++ b/public/posts/2024-07-19-MNIST.md
@@ -123,7 +123,7 @@ train acc, test acc, loss | 0.9441333333333334, 0.9427, 0.23153601658251283
 train acc, test acc, loss | 0.9482, 0.9474, 0.25121415498975397
 train acc, test acc, loss | 0.9515, 0.9509, 0.15593526271388572
 </pre>
-![acc](/images/kevin/3layer_acc.png)
+![loss](/images/kevin/3layer_acc.png)
 ![loss](/images/kevin/3layer_loss.png)
 
 
@@ -212,31 +212,22 @@ train acc, test acc, loss | 0.9139166666666667, 0.917, 0.12435216767520174
 train acc, test acc, loss | 0.91415, 0.9175, 0.27991690708773326
 train acc, test acc, loss | 0.9156333333333333, 0.9189, 0.3164468470662784
 </pre>
-![acc](/images/kevin/1layer_acc.png)
+![loss](/images/kevin/1layer_acc.png)
 ![loss](/images/kevin/1layer_loss.png)
 
 
+1-layer
+train acc   :   0.9156333333333333
+test acc    :   0.9189
+loss        :   0.3164468470662784
 
+2-layer
+train acc   :   0.9459833333333333
+test acc    :   0.9421
+loss        :   0.2243502736741579
 
-
-# 1-layer   
-train acc   :   0.9156333333333333   
-test acc    :   0.9189   
-loss        :   0.3164468470662784   
-
-# 2-layer   
-train acc   :   0.9459833333333333   
-test acc    :   0.9421   
-loss        :   0.2243502736741579   
-
-# 3-layer   
-train acc   :   0.9515   
-test acc    :   0.9509   
-loss        :   0.15593526271388572   
-   
- : layer가 쌓일수록 정확도는 상승하고 loss는 낮아짐을 확인할 수 있음.   
-
-사용 데이터 : MNIST, 손글씨 이미지  
-size = 28*28, labels=10  
-train set : 60,000,     test set : 10,000
+3-layer
+train acc   :   0.9515
+test acc    :   0.9509
+loss        :   0.15593526271388572
 
